tests/ui/resolve/import_conflicts.sol
import {MyUdvt, MyUdvt as MyUdvt} from "./aux/udvt.sol";
import {MyUdvt as MyUdvt2, MyUdvt as MyUdvt2} from "./aux/udvt.sol";

import "./aux/udvt.sol" as MyUdvt; //~ ERROR already declared
